add baseprice to Storefront

--- a/src/Resources/views/storefront/page/eccb-detail.html.twig
+++ b/src/Resources/views/storefront/page/eccb-detail.html.twig
@@ -66,6 +66,7 @@
         window.snippets = {};
         window['snippets']['addToCart'] = '{{ 'candy-bags.addToCart'|trans|raw }}';
         window['snippets']['selected'] = '{{ 'candy-bags.selected'|trans|raw }}';
+        window['snippets']['basePrice'] = '{{ 'candy-bags.basePrice'|trans|raw }}';
 
     </script>
     {{ parent() }}
