--- a/src/Resources/app/administration/src/module/eccb-module/page/item-set-item/item-set-item-detail/item-set-item-detail.twig
+++ b/src/Resources/app/administration/src/module/eccb-module/page/item-set-item/item-set-item-detail/item-set-item-detail.twig
@@ -71,10 +71,10 @@
                             v-model="itemCard.name">
                     </sw-text-field>
 
-                    <sw-text-field
+                    <sw-text-editor
                             :label="$tc('eccb.field.description')"
                             v-model="itemCard.description">
-                    </sw-text-field>
+                    </sw-text-editor>
 
                     <eccb-media-field
                             v-if="itemCard"
