--- a/src/Resources/app/administration/src/module/eccb-module/page/tree-node/tree-node-detail/tree-node-detail.twig
+++ b/src/Resources/app/administration/src/module/eccb-module/page/tree-node/tree-node-detail/tree-node-detail.twig
@@ -146,6 +146,18 @@
 
                     </div>
 
+                    <template v-if="itemCard && itemCard.items.length > 1">
+                        <strong>{{ $tc('eccb.itemCard.assignedToNodes') }}</strong>
+                        <router-link v-for="item in itemCard.items"
+                                     class="eccb-product-link"
+                                     :to="{ name: 'eccb.plugin.tree-node.detail', params: { id: item.treeNodeId } }"
+                                     :style="{ 'color': '#00A1FF', 'display': 'block' }">
+                            <sw-icon name="default-web-link" small></sw-icon>&nbsp;
+                            {{ item.treeNodeId }}
+                        </router-link>
+                        <br>
+                    </template>
+
                     <sw-text-field
                             v-if="itemCard"
                             :label="$tc('eccb.field.name')"
