--- a/src/Resources/views/storefront/page/eccb-detail.html.twig
+++ b/src/Resources/views/storefront/page/eccb-detail.html.twig
@@ -82,6 +82,7 @@
         window['snippets']['productDetails'] = '{{ 'candy-bags.productDetails'|trans|raw }}';
 
         window.config = {};
+        // ToDo: fix this
         window.config = '{{ shopware.config.EventCandyCandyBags.config.pdButtonType }}';
 
     </script>
