show product weight, fix styles

--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -84,10 +84,30 @@
     }
   }
 
+  .weight-info-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 0 10px;
+    width: 100%;
+    .badge {
+      min-width: fit-content;
+    }
+  }
+
+  .product-data-price-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 0 10px;
+    width: 100%;
+
+  }
+
   .ec-price {
     float: right;
     margin-right: 1em;
-    margin-left: 1em;
+    margin-left: auto;
   }
 
   .ec-reference-price {
