--- a/src/Resources/views/storefront/page/eccb-detail.html.twig
+++ b/src/Resources/views/storefront/page/eccb-detail.html.twig
@@ -80,6 +80,10 @@
         window['snippets']['printProductData'] = '{{ 'candy-bags.printProductData'|trans|raw }}';
         window['snippets']['notActive'] = '{{ 'candy-bags.notActive'|trans|raw }}';
         window['snippets']['productDetails'] = '{{ 'candy-bags.productDetails'|trans|raw }}';
+        window['snippets']['finishModal'] = '{{ 'candy-bags.finishModal'|trans|raw }}';
+        window['snippets']['finishModalTitle'] = '{{ 'candy-bags.finishModalTitle'|trans|raw }}';
+        window['snippets']['finishModalCTA'] = '{{ 'candy-bags.finishModalCTA'|trans|raw }}';
+        window['snippets']['finishModalCheckbox'] = '{{ 'candy-bags.finishModalCheckbox'|trans|raw }}';
 
         window.config = {};
         // ToDo: fix this
