--- a/src/Resources/app/storefront/src/scss/_finish-modal.scss
+++ b/src/Resources/app/storefront/src/scss/_finish-modal.scss
@@ -1,5 +1,4 @@
 .ec-configurator {
-
   .modal-header {
     border-bottom: 0.0625rem solid #eaeaea;
   }
@@ -12,7 +11,6 @@
     border-radius: 9px;
     background: #fff;
   }
-
   .show {
     display: block;
   }
@@ -70,5 +68,18 @@
     input[type="checkbox"]:checked + label:after {
       margin: 0 0 0 18px;
     }
+  }
+
+  .fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+  }
+  .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+    opacity: 0;
+  }
+
+  .modal-progress {
+    content: "";
+    border-bottom: 5px solid $primary;
+    display: inline-block;
   }
 }
